Setting getLastErrorDefaults breaks multi-document transactions

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.7
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • v4.4
    • Repl 2021-06-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Reported here: https://developer.mongodb.com/community/forums/t/writeconcern-is-not-allowed-within-a-multi-statement-transaction/16838/2

      Setting getLastErrorDefaults in the replica set config will break write operations in multi-document transactions. Each transactional write will fail with:

      {'ok': 0.0, 'errmsg': 'writeConcern is not allowed within a multi-statement transaction', 'code': 72, 'codeName': 'InvalidOptions'}
      

      The setDefaultRWConcern command does not have this problem.

            Assignee:
            Huayu Ouyang
            Reporter:
            Shane Harvey (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: