SERVER-54896 Setting getLastErrorDefaults breaks multi-document transactions